--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
