--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
